// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Source builtInVars.4gl 1`] = `
main

    let x, y = arg_val
    let x, y = arr_count
    let x, y = arr_cur
    let x, y = sqlca
    
end main
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
   "_type": "program",
   "_location": {
      "line": 1,
      "column": 1,
      "offset": 0
   },
   "_source": "",
   "_children": [
      {
         "_type": "block",
         "_location": {
            "line": 1,
            "column": 1,
            "offset": 0
         },
         "_source": "",
         "_children": [
            {
               "_type": "keyword",
               "_location": {
                  "line": 1,
                  "column": 1,
                  "offset": 0
               },
               "_source": "main",
               "_children": []
            },
            [
               [
                  {
                     "_type": "newLine",
                     "_location": {
                        "line": 1,
                        "column": 5,
                        "offset": 4
                     },
                     "_source": "\\\\n\\\\n",
                     "_children": []
                  },
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 3,
                        "column": 1,
                        "offset": 6
                     },
                     "_source": "\\\\b\\\\b\\\\b\\\\b",
                     "_children": []
                  }
               ],
               {
                  "_type": "keyword",
                  "_location": {
                     "line": 3,
                     "column": 5,
                     "offset": 10
                  },
                  "_source": "let",
                  "_children": []
               },
               [
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 3,
                        "column": 8,
                        "offset": 13
                     },
                     "_source": "\\\\b",
                     "_children": []
                  }
               ],
               [
                  null,
                  {
                     "_type": "identifier",
                     "_location": {
                        "line": 3,
                        "column": 9,
                        "offset": 14
                     },
                     "_source": "x",
                     "_children": []
                  }
               ],
               {
                  "_type": "operator",
                  "_location": {
                     "line": 3,
                     "column": 10,
                     "offset": 15
                  },
                  "_source": ",",
                  "_children": []
               },
               [
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 3,
                        "column": 11,
                        "offset": 16
                     },
                     "_source": "\\\\b",
                     "_children": []
                  }
               ],
               [
                  null,
                  {
                     "_type": "identifier",
                     "_location": {
                        "line": 3,
                        "column": 12,
                        "offset": 17
                     },
                     "_source": "y",
                     "_children": []
                  }
               ],
               [
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 3,
                        "column": 13,
                        "offset": 18
                     },
                     "_source": "\\\\b",
                     "_children": []
                  }
               ],
               {
                  "_type": "operator",
                  "_location": {
                     "line": 3,
                     "column": 14,
                     "offset": 19
                  },
                  "_source": "=",
                  "_children": []
               },
               [
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 3,
                        "column": 15,
                        "offset": 20
                     },
                     "_source": "\\\\b",
                     "_children": []
                  }
               ],
               [
                  null,
                  {
                     "_type": "identifier",
                     "_location": {
                        "line": 3,
                        "column": 16,
                        "offset": 21
                     },
                     "_source": "arg_val",
                     "_children": []
                  }
               ],
               [
                  {
                     "_type": "newLine",
                     "_location": {
                        "line": 3,
                        "column": 23,
                        "offset": 28
                     },
                     "_source": "\\\\n",
                     "_children": []
                  },
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 4,
                        "column": 1,
                        "offset": 29
                     },
                     "_source": "\\\\b\\\\b\\\\b\\\\b",
                     "_children": []
                  }
               ],
               {
                  "_type": "keyword",
                  "_location": {
                     "line": 4,
                     "column": 5,
                     "offset": 33
                  },
                  "_source": "let",
                  "_children": []
               },
               [
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 4,
                        "column": 8,
                        "offset": 36
                     },
                     "_source": "\\\\b",
                     "_children": []
                  }
               ],
               [
                  null,
                  {
                     "_type": "identifier",
                     "_location": {
                        "line": 4,
                        "column": 9,
                        "offset": 37
                     },
                     "_source": "x",
                     "_children": []
                  }
               ],
               {
                  "_type": "operator",
                  "_location": {
                     "line": 4,
                     "column": 10,
                     "offset": 38
                  },
                  "_source": ",",
                  "_children": []
               },
               [
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 4,
                        "column": 11,
                        "offset": 39
                     },
                     "_source": "\\\\b",
                     "_children": []
                  }
               ],
               [
                  null,
                  {
                     "_type": "identifier",
                     "_location": {
                        "line": 4,
                        "column": 12,
                        "offset": 40
                     },
                     "_source": "y",
                     "_children": []
                  }
               ],
               [
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 4,
                        "column": 13,
                        "offset": 41
                     },
                     "_source": "\\\\b",
                     "_children": []
                  }
               ],
               {
                  "_type": "operator",
                  "_location": {
                     "line": 4,
                     "column": 14,
                     "offset": 42
                  },
                  "_source": "=",
                  "_children": []
               },
               [
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 4,
                        "column": 15,
                        "offset": 43
                     },
                     "_source": "\\\\b",
                     "_children": []
                  }
               ],
               [
                  null,
                  {
                     "_type": "identifier",
                     "_location": {
                        "line": 4,
                        "column": 16,
                        "offset": 44
                     },
                     "_source": "arr_count",
                     "_children": []
                  }
               ],
               [
                  {
                     "_type": "newLine",
                     "_location": {
                        "line": 4,
                        "column": 25,
                        "offset": 53
                     },
                     "_source": "\\\\n",
                     "_children": []
                  },
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 5,
                        "column": 1,
                        "offset": 54
                     },
                     "_source": "\\\\b\\\\b\\\\b\\\\b",
                     "_children": []
                  }
               ],
               {
                  "_type": "keyword",
                  "_location": {
                     "line": 5,
                     "column": 5,
                     "offset": 58
                  },
                  "_source": "let",
                  "_children": []
               },
               [
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 5,
                        "column": 8,
                        "offset": 61
                     },
                     "_source": "\\\\b",
                     "_children": []
                  }
               ],
               [
                  null,
                  {
                     "_type": "identifier",
                     "_location": {
                        "line": 5,
                        "column": 9,
                        "offset": 62
                     },
                     "_source": "x",
                     "_children": []
                  }
               ],
               {
                  "_type": "operator",
                  "_location": {
                     "line": 5,
                     "column": 10,
                     "offset": 63
                  },
                  "_source": ",",
                  "_children": []
               },
               [
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 5,
                        "column": 11,
                        "offset": 64
                     },
                     "_source": "\\\\b",
                     "_children": []
                  }
               ],
               [
                  null,
                  {
                     "_type": "identifier",
                     "_location": {
                        "line": 5,
                        "column": 12,
                        "offset": 65
                     },
                     "_source": "y",
                     "_children": []
                  }
               ],
               [
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 5,
                        "column": 13,
                        "offset": 66
                     },
                     "_source": "\\\\b",
                     "_children": []
                  }
               ],
               {
                  "_type": "operator",
                  "_location": {
                     "line": 5,
                     "column": 14,
                     "offset": 67
                  },
                  "_source": "=",
                  "_children": []
               },
               [
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 5,
                        "column": 15,
                        "offset": 68
                     },
                     "_source": "\\\\b",
                     "_children": []
                  }
               ],
               [
                  null,
                  {
                     "_type": "identifier",
                     "_location": {
                        "line": 5,
                        "column": 16,
                        "offset": 69
                     },
                     "_source": "arr_cur",
                     "_children": []
                  }
               ],
               [
                  {
                     "_type": "newLine",
                     "_location": {
                        "line": 5,
                        "column": 23,
                        "offset": 76
                     },
                     "_source": "\\\\n",
                     "_children": []
                  },
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 6,
                        "column": 1,
                        "offset": 77
                     },
                     "_source": "\\\\b\\\\b\\\\b\\\\b",
                     "_children": []
                  }
               ],
               {
                  "_type": "keyword",
                  "_location": {
                     "line": 6,
                     "column": 5,
                     "offset": 81
                  },
                  "_source": "let",
                  "_children": []
               },
               [
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 6,
                        "column": 8,
                        "offset": 84
                     },
                     "_source": "\\\\b",
                     "_children": []
                  }
               ],
               [
                  null,
                  {
                     "_type": "identifier",
                     "_location": {
                        "line": 6,
                        "column": 9,
                        "offset": 85
                     },
                     "_source": "x",
                     "_children": []
                  }
               ],
               {
                  "_type": "operator",
                  "_location": {
                     "line": 6,
                     "column": 10,
                     "offset": 86
                  },
                  "_source": ",",
                  "_children": []
               },
               [
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 6,
                        "column": 11,
                        "offset": 87
                     },
                     "_source": "\\\\b",
                     "_children": []
                  }
               ],
               [
                  null,
                  {
                     "_type": "identifier",
                     "_location": {
                        "line": 6,
                        "column": 12,
                        "offset": 88
                     },
                     "_source": "y",
                     "_children": []
                  }
               ],
               [
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 6,
                        "column": 13,
                        "offset": 89
                     },
                     "_source": "\\\\b",
                     "_children": []
                  }
               ],
               {
                  "_type": "operator",
                  "_location": {
                     "line": 6,
                     "column": 14,
                     "offset": 90
                  },
                  "_source": "=",
                  "_children": []
               },
               [
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 6,
                        "column": 15,
                        "offset": 91
                     },
                     "_source": "\\\\b",
                     "_children": []
                  }
               ],
               [
                  null,
                  {
                     "_type": "identifier",
                     "_location": {
                        "line": 6,
                        "column": 16,
                        "offset": 92
                     },
                     "_source": "sqlca",
                     "_children": []
                  }
               ],
               [
                  {
                     "_type": "newLine",
                     "_location": {
                        "line": 6,
                        "column": 21,
                        "offset": 97
                     },
                     "_source": "\\\\n",
                     "_children": []
                  },
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 7,
                        "column": 1,
                        "offset": 98
                     },
                     "_source": "\\\\b\\\\b\\\\b\\\\b",
                     "_children": []
                  },
                  {
                     "_type": "newLine",
                     "_location": {
                        "line": 7,
                        "column": 5,
                        "offset": 102
                     },
                     "_source": "\\\\n",
                     "_children": []
                  }
               ]
            ],
            [
               {
                  "_type": "keyword",
                  "_location": {
                     "line": 8,
                     "column": 1,
                     "offset": 103
                  },
                  "_source": "end",
                  "_children": []
               },
               [
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 8,
                        "column": 4,
                        "offset": 106
                     },
                     "_source": "\\\\b",
                     "_children": []
                  }
               ],
               {
                  "_type": "keyword",
                  "_location": {
                     "line": 8,
                     "column": 5,
                     "offset": 107
                  },
                  "_source": "main",
                  "_children": []
               },
               null
            ]
         ]
      },
      [
         [
            {
               "_type": "newLine",
               "_location": {
                  "line": 8,
                  "column": 9,
                  "offset": 111
               },
               "_source": "\\\\n\\\\n",
               "_children": []
            }
         ]
      ]
   ]
}
`;

exports[`Source empty_main.4gl 1`] = `
main

end main
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
   "_type": "program",
   "_location": {
      "line": 1,
      "column": 1,
      "offset": 0
   },
   "_source": "",
   "_children": [
      {
         "_type": "block",
         "_location": {
            "line": 1,
            "column": 1,
            "offset": 0
         },
         "_source": "",
         "_children": [
            {
               "_type": "keyword",
               "_location": {
                  "line": 1,
                  "column": 1,
                  "offset": 0
               },
               "_source": "main",
               "_children": []
            },
            [
               [
                  {
                     "_type": "newLine",
                     "_location": {
                        "line": 1,
                        "column": 5,
                        "offset": 4
                     },
                     "_source": "\\\\n\\\\n",
                     "_children": []
                  }
               ]
            ],
            [
               {
                  "_type": "keyword",
                  "_location": {
                     "line": 3,
                     "column": 1,
                     "offset": 6
                  },
                  "_source": "end",
                  "_children": []
               },
               [
                  {
                     "_type": "whiteSpace",
                     "_location": {
                        "line": 3,
                        "column": 4,
                        "offset": 9
                     },
                     "_source": "\\\\b",
                     "_children": []
                  }
               ],
               {
                  "_type": "keyword",
                  "_location": {
                     "line": 3,
                     "column": 5,
                     "offset": 10
                  },
                  "_source": "main",
                  "_children": []
               },
               null
            ]
         ]
      },
      [
         [
            {
               "_type": "newLine",
               "_location": {
                  "line": 3,
                  "column": 9,
                  "offset": 14
               },
               "_source": "\\\\n\\\\n",
               "_children": []
            }
         ]
      ]
   ]
}
`;

exports[`Source globals.4gl 1`] = `
globals "abc.txt"

globals
DEFINE NOME CHAR(50) # abc
end globals

main

end main
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
   "_type": "program",
   "_location": {
      "line": 1,
      "column": 1,
      "offset": 0
   },
   "_source": "",
   "_children": [
      {
         "_type": "notSpecified",
         "_location": {
            "line": 1,
            "column": 1,
            "offset": 0
         },
         "_source": "globals",
         "_children": []
      },
      [
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 1,
                  "column": 8,
                  "offset": 7
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 1,
               "column": 9,
               "offset": 8
            },
            "_source": "\\"abc.txt\\"\\n\\nglobals\\nDEFINE",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 4,
                  "column": 7,
                  "offset": 33
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 4,
               "column": 8,
               "offset": 34
            },
            "_source": "NOME",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 4,
                  "column": 12,
                  "offset": 38
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 4,
               "column": 13,
               "offset": 39
            },
            "_source": "CHAR(50)",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 4,
                  "column": 21,
                  "offset": 47
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "comment",
            "_location": {
               "line": 4,
               "column": 22,
               "offset": 48
            },
            "_source": [
               {
                  "_type": "operator",
                  "_location": {
                     "line": 4,
                     "column": 22,
                     "offset": 48
                  },
                  "_source": "#",
                  "_children": []
               },
               " abc",
               {
                  "_type": "newLine",
                  "_location": {
                     "line": 4,
                     "column": 27,
                     "offset": 53
                  },
                  "_source": "\\\\n",
                  "_children": []
               }
            ],
            "_children": []
         },
         {
            "_type": "notSpecified",
            "_location": {
               "line": 5,
               "column": 1,
               "offset": 54
            },
            "_source": "end",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 5,
                  "column": 4,
                  "offset": 57
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 5,
               "column": 5,
               "offset": 58
            },
            "_source": "globals\\n\\nmain\\n\\nend",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 9,
                  "column": 4,
                  "offset": 76
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 9,
               "column": 5,
               "offset": 77
            },
            "_source": "main\\n\\n",
            "_children": []
         }
      ]
   ]
}
`;

exports[`Source strings.4gl 1`] = `
main

    let x, y = ''
    let x, y = 'ABC,DEF'
    let x, y = '"'
    let x, y = 'ABC\\'DEF'
    
end main

function f1()

    let x, y = ""
    let x, y = "ABC,DEF"
    let x, y = "'"
    let x, y = "ABC\\"DEF"
    
end function
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
   "_type": "program",
   "_location": {
      "line": 1,
      "column": 1,
      "offset": 0
   },
   "_source": "",
   "_children": [
      {
         "_type": "notSpecified",
         "_location": {
            "line": 1,
            "column": 1,
            "offset": 0
         },
         "_source": "main\\n\\n",
         "_children": []
      },
      [
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 3,
                  "column": 1,
                  "offset": 6
               },
               "_source": "\\\\b\\\\b\\\\b\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 3,
               "column": 5,
               "offset": 10
            },
            "_source": "let",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 3,
                  "column": 8,
                  "offset": 13
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 3,
               "column": 9,
               "offset": 14
            },
            "_source": "x,",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 3,
                  "column": 11,
                  "offset": 16
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 3,
               "column": 12,
               "offset": 17
            },
            "_source": "y",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 3,
                  "column": 13,
                  "offset": 18
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 3,
               "column": 14,
               "offset": 19
            },
            "_source": "=",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 3,
                  "column": 15,
                  "offset": 20
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 3,
               "column": 16,
               "offset": 21
            },
            "_source": "''\\n",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 4,
                  "column": 1,
                  "offset": 24
               },
               "_source": "\\\\b\\\\b\\\\b\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 4,
               "column": 5,
               "offset": 28
            },
            "_source": "let",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 4,
                  "column": 8,
                  "offset": 31
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 4,
               "column": 9,
               "offset": 32
            },
            "_source": "x,",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 4,
                  "column": 11,
                  "offset": 34
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 4,
               "column": 12,
               "offset": 35
            },
            "_source": "y",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 4,
                  "column": 13,
                  "offset": 36
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 4,
               "column": 14,
               "offset": 37
            },
            "_source": "=",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 4,
                  "column": 15,
                  "offset": 38
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 4,
               "column": 16,
               "offset": 39
            },
            "_source": "'ABC,DEF'\\n",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 5,
                  "column": 1,
                  "offset": 49
               },
               "_source": "\\\\b\\\\b\\\\b\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 5,
               "column": 5,
               "offset": 53
            },
            "_source": "let",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 5,
                  "column": 8,
                  "offset": 56
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 5,
               "column": 9,
               "offset": 57
            },
            "_source": "x,",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 5,
                  "column": 11,
                  "offset": 59
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 5,
               "column": 12,
               "offset": 60
            },
            "_source": "y",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 5,
                  "column": 13,
                  "offset": 61
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 5,
               "column": 14,
               "offset": 62
            },
            "_source": "=",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 5,
                  "column": 15,
                  "offset": 63
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 5,
               "column": 16,
               "offset": 64
            },
            "_source": "'\\"'\\n",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 6,
                  "column": 1,
                  "offset": 68
               },
               "_source": "\\\\b\\\\b\\\\b\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 6,
               "column": 5,
               "offset": 72
            },
            "_source": "let",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 6,
                  "column": 8,
                  "offset": 75
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 6,
               "column": 9,
               "offset": 76
            },
            "_source": "x,",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 6,
                  "column": 11,
                  "offset": 78
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 6,
               "column": 12,
               "offset": 79
            },
            "_source": "y",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 6,
                  "column": 13,
                  "offset": 80
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 6,
               "column": 14,
               "offset": 81
            },
            "_source": "=",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 6,
                  "column": 15,
                  "offset": 82
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 6,
               "column": 16,
               "offset": 83
            },
            "_source": "'ABC\\\\'DEF'\\n",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 7,
                  "column": 1,
                  "offset": 94
               },
               "_source": "\\\\b\\\\b\\\\b\\\\b",
               "_children": []
            },
            {
               "_type": "newLine",
               "_location": {
                  "line": 7,
                  "column": 5,
                  "offset": 98
               },
               "_source": "\\\\n",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 8,
               "column": 1,
               "offset": 99
            },
            "_source": "end",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 8,
                  "column": 4,
                  "offset": 102
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 8,
               "column": 5,
               "offset": 103
            },
            "_source": "main\\n\\nfunction",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 10,
                  "column": 9,
                  "offset": 117
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 10,
               "column": 10,
               "offset": 118
            },
            "_source": "f1()\\n\\n",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 12,
                  "column": 1,
                  "offset": 124
               },
               "_source": "\\\\b\\\\b\\\\b\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 12,
               "column": 5,
               "offset": 128
            },
            "_source": "let",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 12,
                  "column": 8,
                  "offset": 131
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 12,
               "column": 9,
               "offset": 132
            },
            "_source": "x,",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 12,
                  "column": 11,
                  "offset": 134
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 12,
               "column": 12,
               "offset": 135
            },
            "_source": "y",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 12,
                  "column": 13,
                  "offset": 136
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 12,
               "column": 14,
               "offset": 137
            },
            "_source": "=",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 12,
                  "column": 15,
                  "offset": 138
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 12,
               "column": 16,
               "offset": 139
            },
            "_source": "\\"\\"\\n",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 13,
                  "column": 1,
                  "offset": 142
               },
               "_source": "\\\\b\\\\b\\\\b\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 13,
               "column": 5,
               "offset": 146
            },
            "_source": "let",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 13,
                  "column": 8,
                  "offset": 149
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 13,
               "column": 9,
               "offset": 150
            },
            "_source": "x,",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 13,
                  "column": 11,
                  "offset": 152
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 13,
               "column": 12,
               "offset": 153
            },
            "_source": "y",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 13,
                  "column": 13,
                  "offset": 154
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 13,
               "column": 14,
               "offset": 155
            },
            "_source": "=",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 13,
                  "column": 15,
                  "offset": 156
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 13,
               "column": 16,
               "offset": 157
            },
            "_source": "\\"ABC,DEF\\"\\n",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 14,
                  "column": 1,
                  "offset": 167
               },
               "_source": "\\\\b\\\\b\\\\b\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 14,
               "column": 5,
               "offset": 171
            },
            "_source": "let",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 14,
                  "column": 8,
                  "offset": 174
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 14,
               "column": 9,
               "offset": 175
            },
            "_source": "x,",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 14,
                  "column": 11,
                  "offset": 177
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 14,
               "column": 12,
               "offset": 178
            },
            "_source": "y",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 14,
                  "column": 13,
                  "offset": 179
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 14,
               "column": 14,
               "offset": 180
            },
            "_source": "=",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 14,
                  "column": 15,
                  "offset": 181
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 14,
               "column": 16,
               "offset": 182
            },
            "_source": "\\"'\\"\\n",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 15,
                  "column": 1,
                  "offset": 186
               },
               "_source": "\\\\b\\\\b\\\\b\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 15,
               "column": 5,
               "offset": 190
            },
            "_source": "let",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 15,
                  "column": 8,
                  "offset": 193
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 15,
               "column": 9,
               "offset": 194
            },
            "_source": "x,",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 15,
                  "column": 11,
                  "offset": 196
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 15,
               "column": 12,
               "offset": 197
            },
            "_source": "y",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 15,
                  "column": 13,
                  "offset": 198
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 15,
               "column": 14,
               "offset": 199
            },
            "_source": "=",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 15,
                  "column": 15,
                  "offset": 200
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 15,
               "column": 16,
               "offset": 201
            },
            "_source": "\\"ABC\\\\\\"DEF\\"\\n",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 16,
                  "column": 1,
                  "offset": 212
               },
               "_source": "\\\\b\\\\b\\\\b\\\\b",
               "_children": []
            },
            {
               "_type": "newLine",
               "_location": {
                  "line": 16,
                  "column": 5,
                  "offset": 216
               },
               "_source": "\\\\n",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 17,
               "column": 1,
               "offset": 217
            },
            "_source": "end",
            "_children": []
         },
         [
            {
               "_type": "whiteSpace",
               "_location": {
                  "line": 17,
                  "column": 4,
                  "offset": 220
               },
               "_source": "\\\\b",
               "_children": []
            }
         ],
         {
            "_type": "notSpecified",
            "_location": {
               "line": 17,
               "column": 5,
               "offset": 221
            },
            "_source": "function\\n\\n",
            "_children": []
         }
      ]
   ]
}
`;
